<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/widget_root"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/widget_surface_background"
    android:clickable="true"
    android:clipToOutline="true"
    android:focusable="true"
    android:orientation="vertical"
    android:paddingStart="10dp"
    android:paddingTop="9dp"
    android:paddingEnd="10dp"
    android:paddingBottom="9dp">

    <LinearLayout
        android:id="@+id/widget_head"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:baselineAligned="false"
        android:gravity="center_vertical"
        android:orientation="horizontal">

        <ImageView
            android:id="@+id/widget_mark"
            android:layout_width="15dp"
            android:layout_height="15dp"
            android:contentDescription="@null"
            android:src="@drawable/widget_ic_mark" />

        <TextView
            android:id="@+id/widget_title"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="7dp"
            android:layout_weight="1"
            android:ellipsize="end"
            android:maxLines="1"
            android:text="@string/widget_metric_session"
            android:textColor="@color/widget_on_surface"
            android:textSize="12sp"
            android:textStyle="bold" />

        <Chronometer
            android:id="@+id/widget_uptime"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="6dp"
            android:textColor="@color/widget_on_surface_variant"
            android:textSize="11sp" />
    </LinearLayout>

    <ImageView
        android:id="@+id/widget_chart"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginTop="6dp"
        android:layout_weight="1"
        android:contentDescription="@null"
        android:scaleType="fitXY" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="6dp"
        android:baselineAligned="false"
        android:orientation="horizontal">

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center_vertical"
                android:orientation="horizontal">

                <ImageView
                    android:id="@+id/widget_down_dot"
                    android:layout_width="7dp"
                    android:layout_height="7dp"
                    android:contentDescription="@null"
                    android:src="@drawable/widget_orb_shape" />

                <TextView
                    android:id="@+id/widget_down_value"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="5dp"
                    android:layout_weight="1"
                    android:ellipsize="end"
                    android:maxLines="1"
                    android:text="@string/widget_placeholder_speed"
                    android:textColor="@color/widget_on_surface"
                    android:textSize="13sp"
                    android:textStyle="bold" />
            </LinearLayout>

            <TextView
                android:id="@+id/widget_down_total"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ellipsize="end"
                android:maxLines="1"
                android:text="@string/widget_placeholder_total"
                android:textColor="@color/widget_on_surface_variant"
                android:textSize="10sp" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_weight="1"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center_vertical"
                android:orientation="horizontal">

                <ImageView
                    android:id="@+id/widget_up_dot"
                    android:layout_width="7dp"
                    android:layout_height="7dp"
                    android:contentDescription="@null"
                    android:src="@drawable/widget_orb_shape" />

                <TextView
                    android:id="@+id/widget_up_value"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="5dp"
                    android:layout_weight="1"
                    android:ellipsize="end"
                    android:maxLines="1"
                    android:text="@string/widget_placeholder_speed"
                    android:textColor="@color/widget_on_surface"
                    android:textSize="13sp"
                    android:textStyle="bold" />
            </LinearLayout>

            <TextView
                android:id="@+id/widget_up_total"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ellipsize="end"
                android:maxLines="1"
                android:text="@string/widget_placeholder_total"
                android:textColor="@color/widget_on_surface_variant"
                android:textSize="10sp" />
        </LinearLayout>
    </LinearLayout>
</LinearLayout>
